--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,39 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Consultoria DMDK</title>
 </head>
+
 <body>
+    <section>
+
+        <div class="sobre">
+            <img src="./img/dnbk_consultoria_img_sobre.png" alt="Foto sobre DNBK">
+
+            <div>
+
+                <p class="titulo">CONHEÇA A DNBK</p>
+                <h2 class="subtitulo">Business Intellingence (BI) ao alcance de todos</h2>
+                <p class="texto">O mercado hoteleiro passou por grande transformação nos últimos anos e a gestão do
+                    hotel
+                    tornou-se ainda mais complexa. É preciso saber organizar, tratar e analisar as informações captadas
+                    no
+                    empreendimento para tomar melhores decisões e definir estratégias e nós trazemos está inteligência
+                    para
+                    o seu hotel!</p>
+
+                <form class="form">
+                    <input type="text" placeholder="Nome">
+                    <input type="text" placeholder="Telefone">
+                    <input type="text" placeholder="E-mail">
+                    <input type="sumit" value="Quero mais informações">
+                </form>
+            </div>
+
+
+        </div>
+    </section>
+
+
     <script src="assets/script.js"></script>
 </body>
+
 </html>
