--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Consultoria DMDK</title>
+    <title>Consultoria DNBK</title>
 </head>
 <body>
+    <header>
+    <section>
+        <div class="banner"></div>
+        
+            <h1 class="titulo">Entender o seu hotel para</h1>
+            <h1 class="titulo">otimizar seus resultados</p>
+            <h3 class="texto">A DNBK é uma consultoria especializada em business inteligence</p>
+            <p class="texto"> para hotelaria que ajuda voce a aumentar as suas vendas</h3>
+            <button class="botão">solicitar um orçamento</button>
+            <img src="./img/Image 11.png" alt="">
+
+
+
+
+        </div>
+
+
+    </section>
+</header>
+
     <script src="assets/script.js"></script>
 </body>
 </html>
