Desenvolvimento de orçamento

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,36 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Consultoria DMDK</title>
 </head>
+
 <body>
+
+    <section>
+        <div class="orcamento">
+            <div class="contato">
+
+                <h4>Solicite um orçamento</h4>
+                <p>A ajuda que faltava para o seu hotel</p>
+                <p>Entre em contato para conhecer seus clientes e hóspedes e alavancar as suas vendas.</p>
+                <p>whatsapp:</p>
+                <p>(011) 99101-9024</p>
+                <p>Fale conosco:</p>
+                <p>contato@dnbkconsultoria.com.br</p>
+            </div>
+            <form class="form">
+                <input type="text" placeholder="Nome completo">
+                <input type="text" placeholder="Empresa">
+                <input type="text" placeholder="E-mail profissional">
+                <input type="text" placeholder="Telefone">
+                <input type="text" placeholder="Motivo do contato">
+                <textarea rows="5" cols="33"></textarea>
+                <input type="submit">
+            </form>
+
+
+        </div>
+    </section>
+
     <script src="assets/script.js"></script>
 </body>
+
 </html>
