atualização das informaçoes sobre a empresa

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
+<!-- Sobre a empresa -->
     <section>
-
-        <div class="sobre">
-            <img src="./img/dnbk_consultoria_img_sobre.png" alt="Foto sobre DNBK">
+        <div class="sobre container">
+            <img class="img" src="./img/dnbk_consultoria_img_sobre.png" alt="Foto sobre DNBK">
 
             <div>
-
                 <p class="titulo">CONHEÇA A DNBK</p>
                 <h2 class="subtitulo">Business Intellingence (BI) ao alcance de todos</h2>
                 <p class="texto">O mercado hoteleiro passou por grande transformação nos últimos anos e a gestão do
@@ -29,14 +28,12 @@
                     o seu hotel!</p>
 
                 <form class="form">
-                    <input type="text" placeholder="Nome">
-                    <input type="text" placeholder="Telefone">
-                    <input type="text" placeholder="E-mail">
-                    <input type="sumit" value="Quero mais informações">
+                    <input type="text" placeholder="Nome" class="input">
+                    <input type="text" placeholder="Telefone" class="input">
+                    <input type="text" placeholder="E-mail" class="input">
+                    <input type="sumit" value="Quero mais informações" class="btn">
                 </form>
             </div>
-
-
         </div>
     </section>
 
