--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <!-- Sobre a empresa -->
-    <section>
+    <section id="sobre">
       <div class="sobre container">
         <img
           class="img"
@@ -22,8 +22,8 @@
           alt="Foto sobre DNBK"
         />
 
-        <div>
-          <p class="titulo">CONHEÇA A DNBK</p>
+        <div class="divtexto">
+          <h5 class="titulo">Conheça a DNBK</h5>
           <h2 class="subtitulo">
             Business Intellingence (BI) ao alcance de todos
           </h2>
@@ -45,7 +45,7 @@
       </div>
     </section>
 
-    <section class="servicos">
+    <section id="servicos" class="servicos">
       <div class="servicos__container">
         <div class="servicos__intro">
           <h5>Nossos Serviços</h5>
