--- a/index.html
+++ b/index.html
@@ -16,26 +16,34 @@
         <div class="orcamento">
             <div class="contato">
 
-                <h4>Solicite um orçamento</h4>
-                <p>A ajuda que faltava para o seu hotel</p>
-                <p>Entre em contato para conhecer seus clientes e hóspedes e alavancar as suas vendas.</p>
-                <p>whatsapp:</p>
-                <p>(011) 99101-9024</p>
-                <p>Fale conosco:</p>
+                <h4 class="titulo">Solicite um orçamento</h4>
+                <div class="subtitulo_size">
+                    <p class="subtitulo">A ajuda que faltava para o seu hotel</p>
+                </div>
+
+                <p class="desc_size">Entre em contato para conhecer seus clientes e hóspedes e alavancar as suas vendas.</p>
+                <p class="titulo_desc">whatsapp:
+                    (011) 99101-9024</p>
+                <p class="titulo_desc">Fale conosco:</p>
                 <p>contato@dnbkconsultoria.com.br</p>
             </div>
             <form class="form">
-                <input type="text" placeholder="Nome completo">
-                <input type="text" placeholder="Empresa">
-                <input type="text" placeholder="E-mail profissional">
-                <input type="text" placeholder="Telefone">
-                <input type="text" placeholder="Motivo do contato">
-                <textarea rows="5" cols="33"></textarea>
-                <input type="submit">
+                <input type="text" class="item_form" placeholder="Nome completo">
+                <input type="text" class="item_form" placeholder="Empresa">
+                <input type="text" class="item_form" placeholder="E-mail profissional">
+                <input type="text" class="item_form" placeholder="Telefone">
+                <input type="text" class="item_form" placeholder="Motivo do contato">
+                <textarea class="item_form-area" placeholder="Digite sua mensagem aqui" rows="6" cols="33"></textarea>
+                <input class="botao" type="submit">
             </form>
-
-
         </div>
+    </section>
+    <section>
+        <footer class="rodape">
+            <img class="vlt__topo"src="./img/voltar_ao_topo.png" alt="icone para voltar ao voltar ao topo">
+            <img class="logo_img" src="./img/Logo_DNBK.png" alt="logo da DNBK">
+            <p>© Copyright 2019 DNBK Consultoria Ltda</p>
+        </footer>
     </section>
 
     <script src="assets/script.js"></script>
