--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
 
     <section id="servicos" class="servicos">
-      <div class="servicos__container">
+      <div class="servicos__container container ">
         <div class="servicos__intro">
           <h5>Nossos Serviços</h5>
           <h2>
@@ -166,9 +166,11 @@
           </p>
         </div>
         <!-- Curva -->
-        <div class="servicos__curva"></div>
+
       </div>
+      <div class="servicos__curva"></div>
     </section>
+
 
     <script src="assets/script.js"></script>
   </body>
