--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,27 +9,31 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Consultoria DNBK</title>
 </head>
+
 <body>
+
     <header>
-    <section>
-        <div class="banner"></div>
-        
-            <h1 class="titulo">Entender o seu hotel para</h1>
-            <h1 class="titulo">otimizar seus resultados</p>
-            <h3 class="texto">A DNBK é uma consultoria especializada em business inteligence</p>
-            <p class="texto"> para hotelaria que ajuda voce a aumentar as suas vendas</h3>
-            <button class="botão">solicitar um orçamento</button>
-            <img src="./img/Image 11.png" alt="">
+        <div class="banner">
+            <!-- <img src="./img/hotel.png" class="img_banner" alt="">                 -->
+            <div class="banner_texto">
 
+                <div class="titulo">
+                    <h2>Entender o seu hotel para
+                        otimizar seus resultados</h2>
+                </div>
+            </div>
 
+            <div class="banner_sub">
 
+                <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
+                    para hotelaria que ajuda você a aumentar as suas vendas</p>
+                <button class="btn"> <a href="#">solicitar orçamento</a> </button>
+            </div>
 
         </div>
-
-
-    </section>
-</header>
+    </header>
 
     <script src="assets/script.js"></script>
 </body>
+
 </html>
