--- a/index.html
+++ b/index.html
@@ -1,241 +1,213 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/style.css" />
-    <title>Consultoria DNBK</title>
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/style.css" />
+  <title>Consultoria DNBK</title>
+</head>
 
 <body>
 
-    <nav class='navbar'>
-        <img src="img/Logo_DNBK.png" alt="Logo Consultoria BNDK" class='imagem'>
-    </nav>
+  <nav class='navbar'>
+    <img src="img/Logo_DNBK.png" alt="Logo Consultoria BNDK" class='imagem'>
+  </nav>
 
-      <header>
-          <div class="banner">
-              <div class= "banner container">
-                  <div class="titulo">
-                      <h1>Entender o seu hotel para
-                          otimizar seus resultados</h1>
-                  </div>
-  
-  
-                  <div class="banner_sub">
-  
-                      <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
-                          para hotelaria que ajuda você a aumentar as suas vendas</p>
-                      <button class="btn"> <a href="#">solicitar orçamento</a> </button>
-                  </div>
-              </div>
-          </div>
-      </header>
-    <!-- Sobre a empresa -->
-    <section id="sobre">
-      <div class="sobre container">
-        <img
-          class="img"
-          src="./img/dnbk_consultoria_img_sobre.png"
-          alt="Foto sobre DNBK"
-        />
-
-        <div class="divtexto">
-          <h5 class="titulo">Conheça a DNBK</h5>
-          <h2 class="subtitulo">
-            Business Intellingence (BI) ao alcance de todos
-          </h2>
-          <p class="texto">
-            O mercado hoteleiro passou por grande transformação nos últimos anos
-            e a gestão do hotel tornou-se ainda mais complexa. É preciso saber
-            organizar, tratar e analisar as informações captadas no
-            empreendimento para tomar melhores decisões e definir estratégias e
-            nós trazemos está inteligência para o seu hotel!
-          </p>
-
-          <form class="form">
-            <input type="text" placeholder="Nome" class="input" />
-            <input type="text" placeholder="Telefone" class="input" />
-            <input type="text" placeholder="E-mail" class="input" />
-            <input type="sumit" value="Quero mais informações" class="btn" />
-          </form>
-        </div>
-      </div>
-    </section>
-
-    <section id="servicos" class="servicos">
-      <div class="servicos__container container ">
-        <div class="servicos__intro">
-          <h5>Nossos Serviços</h5>
-          <h2>
-            Consultoria modular: você define em qual etapa precisará de nossa
-            ajuda!
-          </h2>
+  <header>
+    <div class="banner">
+      <div class="container">
+        <div class="titulo">
+          <h1>Entender o seu hotel para
+            otimizar seus resultados</h1>
         </div>
 
-    <script src="assets/script.js"></script>
-</body>
-        <!-- Primeira linha de cartões -->
+        <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
+          para hotelaria que ajuda você a aumentar as suas vendas</p>
+        <a class="btn" href="#">solicitar orçamento</a>
 
-        <div class="servicos__divcartoes">
-          <!-- Diagnóstico -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_diagnostico@2x.png"
-              alt="Desenho de uma tela de computador com um relógio na frente."
-            />
-            <h4 class="servicos__titulo__cartao">Diagnóstico</h4>
-            <p class="servicos__paragrafo">
-              Conhecer a área, a equipe, os desafios do dia a dia. Levantar os
-              processos e procedimentos já existentes, se existem relatórios
-              (quais) e a partir daí listar as oportunidades de melhorias
-              necessárias para alcançar um melhor resultado.
-            </p>
-          </div>
-          <!-- Plano Estratégico -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_planoestrategico@2x.png"
-              alt="Desenho de um gráfico."
-            />
-            <h4 class="servicos__titulo__cartao">Plano Estratégico</h4>
-            <p class="servicos__paragrafo">
-              Desenhar a melhor estrutura comercial de acordo com o diagnóstico
-              (pessoas, processos, relatórios, ferramentas). Descrever as
-              implementações necessárias buscando alta performance.
-            </p>
-          </div>
-          <!-- Inteligência B2B -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_inteligenciab2b@2x.png"
-              alt="Desenho de um gráfico em ascendência."
-            />
-            <h4 class="servicos__titulo__cartao">Inteligência B2B</h4>
-            <p class="servicos__paragrafo">
-              Levantamento e apresentação do perfil dos clientes, seguida de
-              definição de carteiras, segmentação, estrutura da equipe e
-              sugestão de atendimento, definição de metas e relatórios de
-              acompanhamento.
-            </p>
-          </div>
-        </div>
-
-        <!-- Segunda linha de cartões -->
-
-        <div class="servicos__divcartoes">
-          <!-- Inteligência B2C -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_inteligenciab2c@2x.png"
-              alt="Desenho de um cliente."
-            />
-            <h4 class="servicos__titulo__cartao">Inteligência B2C</h4>
-            <p class="servicos__paragrafo">
-              Apresentação do perfil de hóspede. Entendimento do comportamento
-              de compra dos hóspedes, definição de clusters (agrupamento de
-              acordo com perfil), sugestão de estratégias de comunicação. Foco
-              no relacionamento para alavancar receita do hotel.
-            </p>
-          </div>
-          <!-- Relatórios -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_relatorios@2x.png"
-              alt="Desenho de um calendário."
-            />
-            <h4 class="servicos__titulo__cartao">Relatórios</h4>
-            <p class="servicos__paragrafo">
-              Confecção de todos os relatórios de apoio para gerar e acompanhar
-              o módulo “Inteligência B2B”, “Inteligência B2C”, bem como outros
-              relatórios que apoiem a tomada de decisão gerencial de maneira
-              mais estratégica e assertiva.
-            </p>
-          </div>
-          <!-- Treinamentos -->
-          <div class="servicos__cartao">
-            <img
-              class="servicos__img"
-              src="./img/dnbk_consultoria_icon_treinamento@2x.png"
-              alt="Desenho de um professor dando aula."
-            />
-            <h4 class="servicos__titulo__cartao">Treinamentos</h4>
-            <p class="servicos__paragrafo">
-              Capacitação das equipes de reservas, vendas e recepção para que o
-              trabalho desenvolvido pela DNBK Consultoria possa ser levado
-              adiante pelo próprio hotel. Acreditamos que conhecimento deve ser
-              compartilhado!
-            </p>
-          </div>
-        </div>
-
-        <!-- Suporte -->
-        <div class="servicos__suporte">
-          <h2>Suporte</h2>
-          <p>
-            Estamos sempre prontos para tirar as dúvidas e ajudar no
-            desenvolvimento da área de BI em seu hotel. Caso não haja um
-            responsável no hotel por este trabalho nós fazemos o acompanhamento
-            dos relatórios, manutenção e atualização dos dados e sugestões para
-            tomada de decisão.
-          </p>
-        </div>
-        <!-- Curva -->
 
       </div>
-      <div class="servicos__curva"></div>
-    </section>
+    </div>
+  </header>
+  <!-- Sobre a empresa -->
+  <section id="sobre">
+    <div class="sobre container">
+      <img class="img" src="./img/dnbk_consultoria_img_sobre.png" alt="Foto sobre DNBK" />
 
-       <!-- Orçamento -->
-  <section id="orcamento" class="orcamento">
-    <div class="orcamento container">
-      <div class="contato">
-        <h4 class="titulo">Solicite um orçamento</h4>
-        <div class="subtitulo_size">
-          <p class="subtitulo">A ajuda que faltava para o seu hotel</p>
-        </div>
-        <p class="desc_size">Entre em contato para conhecer seus clientes e hóspedes e alavancar as suas vendas.</p>
-        <div class="titulo__contato">
-          <p class="titulo_desc">Whatsapp:</p>
-          <span>(011) 99101-9024</span>
-        </div>
-        <div class="titulo__contato">
-          <p class="titulo_desc">Fale conosco:</p>
-          <span>contato@dnbkconsultoria.com.br</span>
-        </div>
+      <div class="divtexto">
+        <h5 class="titulo">Conheça a DNBK</h5>
+        <h2 class="subtitulo">
+          Business Intellingence (BI) ao alcance de todos
+        </h2>
+        <p class="texto">
+          O mercado hoteleiro passou por grande transformação nos últimos anos
+          e a gestão do hotel tornou-se ainda mais complexa. É preciso saber
+          organizar, tratar e analisar as informações captadas no
+          empreendimento para tomar melhores decisões e definir estratégias e
+          nós trazemos está inteligência para o seu hotel!
+        </p>
+
+        <form class="form">
+          <input type="text" placeholder="Nome" class="input" />
+          <input type="text" placeholder="Telefone" class="input" />
+          <input type="text" placeholder="E-mail" class="input" />
+          <input type="sumit" value="Quero mais informações" class="btn" />
+        </form>
       </div>
-      <!-- Formulário de orçamento -->
-      <form class="form">
-        <input type="text" class="item_form" placeholder="Nome completo">
-        <input type="text" class="item_form" placeholder="Empresa">
-        <input type="text" class="item_form" placeholder="E-mail profissional">
-        <input type="text" class="item_form" placeholder="Telefone">
-        <input type="text" class="item_form" placeholder="Motivo do contato">
-        <textarea class="item_form-area" placeholder="Digite sua mensagem aqui" rows="6" cols="33"></textarea>
-        <input class="botao" type="submit">
-      </form>
     </div>
   </section>
-  <section>
-    <!-- Rodapé -->
-    <footer class="rodape container">
-      <img class="logo_img" src="./img/Logo_DNBK.png" alt="logo da DNBK">
-      <p>© Copyright 2019 DNBK Consultoria Ltda</p>
-      <img class="vlt__topo" src="./img/voltar_ao_topo.png" alt="icone para voltar ao voltar ao topo">
-    </footer>
-  </section>
+
+  <section id="servicos" class="servicos">
+    <div class="servicos__container container ">
+      <div class="servicos__intro">
+        <h5>Nossos Serviços</h5>
+        <h2>
+          Consultoria modular: você define em qual etapa precisará de nossa
+          ajuda!
+        </h2>
+      </div>
+
+      <script src="assets/script.js"></script>
+</body>
+<!-- Primeira linha de cartões -->
+
+<div class="servicos__divcartoes">
+  <!-- Diagnóstico -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_diagnostico@2x.png"
+      alt="Desenho de uma tela de computador com um relógio na frente." />
+    <h4 class="servicos__titulo__cartao">Diagnóstico</h4>
+    <p class="servicos__paragrafo">
+      Conhecer a área, a equipe, os desafios do dia a dia. Levantar os
+      processos e procedimentos já existentes, se existem relatórios
+      (quais) e a partir daí listar as oportunidades de melhorias
+      necessárias para alcançar um melhor resultado.
+    </p>
+  </div>
+  <!-- Plano Estratégico -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_planoestrategico@2x.png" alt="Desenho de um gráfico." />
+    <h4 class="servicos__titulo__cartao">Plano Estratégico</h4>
+    <p class="servicos__paragrafo">
+      Desenhar a melhor estrutura comercial de acordo com o diagnóstico
+      (pessoas, processos, relatórios, ferramentas). Descrever as
+      implementações necessárias buscando alta performance.
+    </p>
+  </div>
+  <!-- Inteligência B2B -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_inteligenciab2b@2x.png"
+      alt="Desenho de um gráfico em ascendência." />
+    <h4 class="servicos__titulo__cartao">Inteligência B2B</h4>
+    <p class="servicos__paragrafo">
+      Levantamento e apresentação do perfil dos clientes, seguida de
+      definição de carteiras, segmentação, estrutura da equipe e
+      sugestão de atendimento, definição de metas e relatórios de
+      acompanhamento.
+    </p>
+  </div>
+</div>
+
+<!-- Segunda linha de cartões -->
+
+<div class="servicos__divcartoes">
+  <!-- Inteligência B2C -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_inteligenciab2c@2x.png" alt="Desenho de um cliente." />
+    <h4 class="servicos__titulo__cartao">Inteligência B2C</h4>
+    <p class="servicos__paragrafo">
+      Apresentação do perfil de hóspede. Entendimento do comportamento
+      de compra dos hóspedes, definição de clusters (agrupamento de
+      acordo com perfil), sugestão de estratégias de comunicação. Foco
+      no relacionamento para alavancar receita do hotel.
+    </p>
+  </div>
+  <!-- Relatórios -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_relatorios@2x.png" alt="Desenho de um calendário." />
+    <h4 class="servicos__titulo__cartao">Relatórios</h4>
+    <p class="servicos__paragrafo">
+      Confecção de todos os relatórios de apoio para gerar e acompanhar
+      o módulo “Inteligência B2B”, “Inteligência B2C”, bem como outros
+      relatórios que apoiem a tomada de decisão gerencial de maneira
+      mais estratégica e assertiva.
+    </p>
+  </div>
+  <!-- Treinamentos -->
+  <div class="servicos__cartao">
+    <img class="servicos__img" src="./img/dnbk_consultoria_icon_treinamento@2x.png"
+      alt="Desenho de um professor dando aula." />
+    <h4 class="servicos__titulo__cartao">Treinamentos</h4>
+    <p class="servicos__paragrafo">
+      Capacitação das equipes de reservas, vendas e recepção para que o
+      trabalho desenvolvido pela DNBK Consultoria possa ser levado
+      adiante pelo próprio hotel. Acreditamos que conhecimento deve ser
+      compartilhado!
+    </p>
+  </div>
+</div>
+
+<!-- Suporte -->
+<div class="servicos__suporte">
+  <h2>Suporte</h2>
+  <p>
+    Estamos sempre prontos para tirar as dúvidas e ajudar no
+    desenvolvimento da área de BI em seu hotel. Caso não haja um
+    responsável no hotel por este trabalho nós fazemos o acompanhamento
+    dos relatórios, manutenção e atualização dos dados e sugestões para
+    tomada de decisão.
+  </p>
+</div>
+<!-- Curva -->
+
+</div>
+<div class="servicos__curva"></div>
+</section>
+
+<!-- Orçamento -->
+<section id="orcamento" class="orcamento">
+  <div class="orcamento container">
+    <div class="contato">
+      <h4 class="titulo">Solicite um orçamento</h4>
+      <div class="subtitulo_size">
+        <p class="subtitulo">A ajuda que faltava para o seu hotel</p>
+      </div>
+      <p class="desc_size">Entre em contato para conhecer seus clientes e hóspedes e alavancar as suas vendas.</p>
+      <div class="titulo__contato">
+        <p class="titulo_desc">Whatsapp:</p>
+        <span>(011) 99101-9024</span>
+      </div>
+      <div class="titulo__contato">
+        <p class="titulo_desc">Fale conosco:</p>
+        <span>contato@dnbkconsultoria.com.br</span>
+      </div>
+    </div>
+    <!-- Formulário de orçamento -->
+    <form class="form">
+      <input type="text" class="item_form" placeholder="Nome completo">
+      <input type="text" class="item_form" placeholder="Empresa">
+      <input type="text" class="item_form" placeholder="E-mail profissional">
+      <input type="text" class="item_form" placeholder="Telefone">
+      <input type="text" class="item_form" placeholder="Motivo do contato">
+      <textarea class="item_form-area" placeholder="Digite sua mensagem aqui" rows="6" cols="33"></textarea>
+      <input class="botao" type="submit">
+    </form>
+  </div>
+</section>
+<section>
+  <!-- Rodapé -->
+  <footer class="rodape container">
+    <img class="logo_img" src="./img/Logo_DNBK.png" alt="logo da DNBK">
+    <p>© Copyright 2019 DNBK Consultoria Ltda</p>
+    <img class="vlt__topo" src="./img/voltar_ao_topo.png" alt="icone para voltar ao voltar ao topo">
+  </footer>
+</section>
 
 
-    <script src="assets/script.js"></script>
-  </body>
+<script src="assets/script.js"></script>
+</body>
+
 </html>
