--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 
         <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
           para hotelaria que ajuda você a aumentar as suas vendas</p>
-        <a class="btn" href="#">solicitar orçamento</a>
+
+          <div class="botao">
+        <a class="btn" href="#orcamento">solicitar um orçamento</a>
+      </div>
 
 
       </div>
