--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           para hotelaria que ajuda você a aumentar as suas vendas</p>
 
           <div class="botao">
-        <a class="btn" href="#orcamento">solicitar um orçamento</a>
+        <a class="btn" href="#orcamento">Solicitar um orçamento</a>
       </div>
 
 
