--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   <link rel="stylesheet" href="assets/style.css" />
   <title>Consultoria DNBK</title>
 </head>
-
 <body>
 
-  <nav class='navbar'>
+<nav class='navbar'>
+  <div class='container'>
     <img src="img/Logo_DNBK.png" alt="Logo Consultoria BNDK" class='imagem'>
+    <ul class='lista_links'>
+      <li class='links'>A DNBK</li>
+      <li class='links'>Serviços</li>
+      <li class='links'>Suporte</li>
+      <li class='links btn_orcamento'>Solicite um Orçamento</li>
+    </ul>
   </nav>
 
   <header>
@@ -24,22 +30,22 @@
             otimizar seus resultados</h1>
         </div>
 
-        <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
+        <div class="subtitulo">
+
+        <p>A DNBK é uma consultoria especializada em business intelligence (BI)
           para hotelaria que ajuda você a aumentar as suas vendas</p>
+
+        </div>
 
           <div class="botao">
         <a class="btn" href="#orcamento">Solicitar um orçamento</a>
       </div>
-
-
-      </div>
-    </div>
-  </header>
+</header>
+  
   <!-- Sobre a empresa -->
   <section id="sobre">
     <div class="sobre container">
       <img class="img" src="./img/dnbk_consultoria_img_sobre.png" alt="Foto sobre DNBK" />
-
       <div class="divtexto">
         <h5 class="titulo">Conheça a DNBK</h5>
         <h2 class="subtitulo">
@@ -156,7 +162,9 @@
 <!-- Suporte -->
 <div class="servicos__suporte">
   <h2>Suporte</h2>
-  <p>
+
+
+  <p class="servicos__paragrafo">
     Estamos sempre prontos para tirar as dúvidas e ajudar no
     desenvolvimento da área de BI em seu hotel. Caso não haja um
     responsável no hotel por este trabalho nós fazemos o acompanhamento
@@ -189,19 +197,21 @@
       </div>
     </div>
     <!-- Formulário de orçamento -->
-    <form class="form">
-      <input type="text" class="item_form" placeholder="Nome completo">
-      <input type="text" class="item_form" placeholder="Empresa">
-      <input type="text" class="item_form" placeholder="E-mail profissional">
-      <input type="text" class="item_form" placeholder="Telefone">
-      <input type="text" class="item_form" placeholder="Motivo do contato">
-      <textarea class="item_form-area" placeholder="Digite sua mensagem aqui" rows="6" cols="33"></textarea>
-      <input class="botao" type="submit">
-    </form>
+    <div class="fomulario">
+      <form class="form">
+        <input type="text" class="item_form" placeholder="Nome completo">
+        <input type="text" class="item_form" placeholder="Empresa">
+        <input type="text" class="item_form" placeholder="E-mail profissional">
+        <input type="text" class="item_form" placeholder="Telefone">
+        <input type="text" class="item_form" placeholder="Motivo do contato">
+        <textarea class="item_form-area" placeholder="Digite sua mensagem aqui" rows="6" cols="33"></textarea>
+        <input class="botao" type="submit" value="Enviar">
+      </form>
+    </div>
   </div>
 </section>
+<!-- Rodapé -->
 <section>
-  <!-- Rodapé -->
   <footer class="rodape container">
     <img class="logo_img" src="./img/Logo_DNBK.png" alt="logo da DNBK">
     <p>© Copyright 2019 DNBK Consultoria Ltda</p>
