--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <div class="banner_sub">
                       <p class="subtitulo">A DNBK é uma consultoria especializada em business inteligence (BI)
                           para hotelaria que ajuda você a aumentar as suas vendas</p>
-                      <button class="btn"><a href="#">solicitar orçamento</a> </button>
+                      <button class="btn"><a href="#">solicitar orçamento</a></button>
                   </div>
               </div>
           </div>
@@ -209,7 +209,7 @@
   <footer class="rodape container">
     <img class="logo_img" src="./img/Logo_DNBK.png" alt="logo da DNBK">
     <p>© Copyright 2019 DNBK Consultoria Ltda</p>
-    <img class="vlt__topo" src="./img/voltar_ao_topo.png" alt="icone para voltar ao voltar ao topo">
+    <a href=""><img class="vlt__topo" src="./img/voltar_ao_topo.png" alt="icone para voltar ao voltar ao topo" title="Voltar ao topo"></a>
   </footer>
 </section>
 
