--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
   <header>
     <div class="banner">
       <div class="container">
-        <div class="titulo">
-          <h1>Entender o seu hotel para
-            otimizar seus resultados</h1>
-        </div>
+        <div class='tudo'>
+          <div class="titulo">
+            <h1>Entender o seu hotel para
+              otimizar seus resultados</h1>
+          </div>
 
-        <div class="subtitulo">
+          <div class="subtitulo">
 
-          <p>A DNBK é uma consultoria especializada em business intelligence (BI)
-            para hotelaria que ajuda você a aumentar as suas vendas</p>
+            <p>A DNBK é uma consultoria especializada em business intelligence (BI)
+              para hotelaria que ajuda você a aumentar as suas vendas</p>
 
-        </div>
+          </div>
 
-        <div class="botao">
-          <a class="btn" href="#orcamento">Solicitar um orçamento</a>
+          <div class="botao">
+            <a class="btn" href="#orcamento">Solicitar um orçamento</a>
+          </div>
         </div>
       </div>
     </div>
@@ -71,10 +73,10 @@
         </p>
 
         <form class="form">
-          <input type="text" placeholder="Nome" class="input" />
-          <input type="text" placeholder="Telefone" class="input" />
-          <input type="text" placeholder="E-mail" class="input" />
-          <input type="sumit" value="Quero mais informações" class="btn" />
+          <input type="text" placeholder="Nome" class="input">
+          <input type="text" placeholder="Telefone" class="input">
+          <input type="text" placeholder="E-mail" class="input">
+          <input type="submit" value="Quero mais informações" class="btn">
         </form>
       </div>
     </div>
